--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^2.0.0-beta.0"
   },
   "dependencies": {
-    "leaflet": "^1.9.4"
+    "leaflet": "^1.9.4",
+    "maplibre-gl": "^3.1.0"
   }
 }
