--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {},
   "devDependencies": {
+    "@types/apple-mapkit-js-browser": "^5.65.3",
     "@types/leaflet": "^1.9.3",
     "astro": "^2.6.4"
   },
@@ -25,7 +26,7 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
-    "mapbox-gl": "^2.15.0",
+    "mapbox-gl": "1.5.1",
     "maplibre-gl": "^3.1.0"
   }
 }
