--- a/demo/package.json
+++ b/demo/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.19.7",
     "astro": "^2.6.4",
     "maps-withastro": "^0.0.1"
   }
