--- a/demo/package.json
+++ b/demo/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.1.1",
-    "astro": "^4.4.4",
-    "maps-withastro": "^0.0.2"
+    "@astrojs/mdx": "^2.3.0",
+    "@popperjs/core": "^2.11.8",
+    "@types/bootstrap": "^5.2.10",
+    "astro": "^4.6.1",
+    "astro-bootstrap": "workspace:*",
+    "bootstrap": "^5.3.3",
+    "maps-withastro": "workspace:*"
   }
 }
