--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
-    "mapbox-gl": "1.5.1",
-    "maplibre-gl": "^4.1.2"
+    "mapbox-gl": "1.5.1"
   }
 }
