--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,6 @@
     "@types/bootstrap": "^5.2.10",
     "astro": "^4.6.1",
     "bootstrap": "^5.3.3",
-    "maps-withastro": "workspace:*"
+    "maps-withastro": "github:roblabs/maps-withastro"
   }
 }
