runs-on: self-hosted

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted # Switch to self-hosted for building locally.  https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idruns-on
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
