--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,9 @@ on:
   # Trigger the workflow every time you push to the `main` branch
   # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: [ main, runner ]
+    branches: 
+      - main
+      - runner
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
